crates/oxc_css_parser/tests/error/selectors/invalid-attr-2.snap
---
source: crates/oxc_css_parser/tests/error.rs
---
error: attribute selector matcher is expected
  ┌─ invalid-attr-2.css:1:6
  │
1 │ [href#="test"] {}
  │      ^


